--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -9,10 +9,62 @@ html
   scroll-behavior: smooth;
 }
 
+@media screen and (orientation: landscape)
+{
+    body {
+        flex-direction: row;
+    }
+}
+
+@media screen and (orientation: portrait)
+{
+    body {
+        flex-direction: column;
+    }
+}
+
 body 
 {
   margin: 0;
-  background-image: url("br.jpg")
+  background-image: url("br.jpg");
+}
+
+.topbar 
+{
+    overflow: hidden;
+    background-color: rgba(47, 79, 79, 0.877);
+    width:100%;
+    height: 50px;
+    margin: 0;
+    padding:0;
+    position:fixed;
+}
+
+.topbar ul
+{
+    list-style: none;
+    justify-content: space-around;
+    display: flex;
+}
+
+.topbar a 
+{
+    float:left;
+    color: gainsboro;
+    text-align: center;
+    box-sizing: border-box;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 50px;
+}
+
+.topbar a:hover 
+{
+    color: black;
+}
+
+.topbar a:active {
+    color: black;
 }
 
 section 
@@ -26,13 +78,15 @@ section
 section:nth-child(even) 
 {
     background: rgba(255, 255, 255, 0.774);
-    color: teal;
+    color: rgb(1, 114, 114);
+    font-size: 50px;
 } 
 
 section:nth-child(odd) 
 {
     background: rgba(101, 119, 85, 0.671);
     color: white;
+    font-size: 50px;
 } 
 
 section:before 
@@ -42,31 +96,3 @@ section:before
     font-size: 8em;
 }
 
-ul 
-{
-    width:100%;
-    background: rgba(47, 79, 79, 0.877);
-    height: 50px;
-    margin: 0;
-    padding:0;
-    position:fixed;
-    top:0;
-    letter-spacing: 0;
-    display: flex;
-    justify-content: space-around;
-}
-
-ul li
-{
-    list-style: none;
-}
-
-ul li a
-{
-    color: gainsboro;
-    line-height: 50px;
-    box-sizing: border-box;
-    font-size: 20px;
-    font-style: none;
-    text-decoration: none;
-}
